--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>Welcome to my portfolio!</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>My name is Adrienne. I'm an Android Developer with a passion for entreprenurship and writing.<br />
+								After ten years working in the non-profit sector, I decided to take a leap into android development.
+								Okay, so it wasn't really a leap. It was more like a slow inventable return to my early roots in techology.
+								</p>
+								<br><br/>
+								<h3>Technologies</h3>
+								<p></p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
