--- a/index.html
+++ b/index.html
@@ -49,14 +49,12 @@
 							</header>
 							<div class="content">
 								<p>My name is Adrienne. I'm an Android Developer with a passion for entreprenurship and writing.<br />
-								After ten years working in the non-profit sector, I decided to take a leap into android development.
-								Okay, so it wasn't really a leap. It was more like a slow inventable return to my early roots in techology.
+								After ten years working in the non-profit sector, I decided to take a leap into android development.<br/>
+								Okay, so it wasn't really a leap. It was more like a slow inventable return to my early<br/>
+								roots in techology.
 								</p>
-								<br><br/>
-								<h3>Technologies</h3>
-								<p></p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">Checkout my work</a></li>
 								</ul>
 							</div>
 						</div>
@@ -69,7 +67,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/TodoApp.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Aliquam</a></h3>
@@ -166,22 +164,22 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">mccloud.adrienne@gmail.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>(240) 583-0259</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
+										<span>Nearest the best brewary<br />
+										Open to a city near you<br />
 										United States of America</span>
 									</div>
 								</section>
@@ -193,11 +191,9 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="linkedin.com/in/adrienne-mccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
