--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<img src="images/TodoApp.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
+										<h3><a href="landing.html" class="link">Apps</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
