--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
-
+ 
 		<!-- Wrapper -->
+		
 			<div id="wrapper">
 
 				<!-- Header -->
+				<!--------
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>Portoflio</strong> <span>by HTML5 UP</span></a>
 						<nav>
@@ -28,6 +30,7 @@
 					</header>
 
 				<!-- Menu -->
+				<!--------
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
@@ -37,10 +40,11 @@
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">Get Started</a></li>
-					<!-----		 <li><a href="#" class="button fit">Log In</a></li> ---->
+							 <li><a href="#" class="button fit">Log In</a></li> 
 						</ul>
 					</nav>
-
+				
+------>
 				<!-- Banner -->
 					<section id="banner" class="major">
 						<div class="inner">
