--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 										<img src="images/TodoApp.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Apps</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="todoapp.html" class="link">Apps</a></h3>
+										<p>A simple app to store a to do list.</p>
 									</header>
 								</article>
 								<article>
