--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<img src="images/TodoApp.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="todoapp.html" class="link">Apps</a></h3>
+										<h3><a href="todoapp.html" class="link">To Do App</a></h3>
 										<p>A simple app to store a to do list.</p>
 									</header>
 								</article>
@@ -83,10 +83,11 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="mobilecommerce.html" class="link">Mobile Commerce App</a></h3>
+										<p>Mobile commerce app for purchasing dolls.</p>
 									</header>
 								</article>
+								<!----
 								<article>
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
@@ -122,19 +123,18 @@
 										<h3><a href="landing.html" class="link">Etiam</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
-								</article>
+								</article> 
+		------>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>About Me</h2>
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
-									</ul>
+									
 								</div>
 							</section>
 
