--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/todoapp.html" alt="" />
+										<img src="images/todoapp.html" alt="todo" height="200" width="200" />
 									</span>
 									<header class="major">
 										<h3><a href="todoapp.html" class="link">To Do App</a></h3>
