--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" height="200" width="200" />
+										<img src="images/todolistapp.jpg" alt="To Do App" height="200px" width="200px" />
 									</span>
 									<header class="major">
 										<h3><a href="todoapp.html" class="link">To Do App</a></h3>
