almost complete todolistapp

--- a/todoapp.html
+++ b/todoapp.html
@@ -44,13 +44,13 @@
 								<div class="inner">
 									<header class="major">
 										<h1>ToDo App</h1>
-									</header>
-									<span class="image main"><img src="images/todoapp.png" alt="" /></span>
+									</header> 
+									<span class="image main"><img src="images/todolistapp.jpg" alt="To Do App" height="200px" width="200px"/></span>
                   							<p>What it does</p>
 									<p>To Do app is a simple way to keep track of things you want to buy. Enter the title of the list on the second screen. On the next screen the user is able to enter the item and any desired description. Once an item has been added to the list, the user is able to review all lists from the main screen.</p>
                   							<p><strong>Technologies</strong></p>
-									<p>Singleton, Material Design</p>
-                  							<p></p>
+									<p>Singleton, Material Design, ListView</p>
+                  							
                							</div>
 							</section>
 
