--- a/mobilecommerceapp.html
+++ b/mobilecommerceapp.html
@@ -43,17 +43,17 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>ToDo App</h1>
+										<h1>Mobile Commerce App</h1>
 									</header> 
 									<span class="image main"><img src="images/mobilecommerceapp.jpg" alt="Mobile Commerce App" height="" width=""/></span>
-                  <p>What it does</p>
-                  <p>This mobile commerce app allows the user to add items to the shopping cart and a wish list. The user is able to search though the database of items. </p>
+                  							<p>What it does</p>
+                  							<p>This mobile commerce app allows the user to add items to the shopping cart and a wish list. The user is able to search though the database of items. </p>
 									<p><strong>Technologies</strong></p>
 									<p>SQLite, RecyclerView</p>
-                  <p>Future Expansion</p>
-                  <p>Connect to payment services. Comparison.</p>
+                  							<p>Future Expansion</p>
+                  							<p>Connect to payment services. Comparison.</p>
                   							
-               	</div>
+               							</div>
 							</section>
 
 					</div>
