added mobile commerce

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/mobilecommerceapp.jpg" alt="Mobile Commerce App" height="200px" width="200px" />
 									</span>
 									<header class="major">
-										<h3><a href="mobilecommerce.html" class="link">Mobile Commerce App</a></h3>
+										<h3><a href="mobilecommerceapp.html" class="link">Mobile Commerce App</a></h3>
 										<p>Mobile commerce app for purchasing dolls.</p>
 									</header>
 								</article>
