--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>Adrienne's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -49,13 +49,14 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Welcome to my portfolio!</h1>
+								<h1>Offical Portfolio of Adrienne M.</h1>
+								<h1>Developer/Writer</h1>
 							</header>
 							<div class="content">
-								<p>My name is Adrienne. I'm an Android Developer with a passion for entreprenurship and writing.<br />
-								After ten years working in the non-profit sector, I decided to take a leap into android development.<br/>
-								Okay, so it wasn't really a leap. It was more like a slow inventable return to my early<br/>
-								roots in techology.
+								<p>Hey there! Thanks for visiting my portfolio.<br/> My name is Adrienne. I'm an Android Developer with a passion for entreprenurship and writing.<br />
+								Below are examples of apps that I have created and pieces that I have written.<br/>
+								Below that is a brief bio about myself and how we can connect.<br/>
+								I look forward to connecting. 
 								</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Checkout my work</a></li>
