--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="mccloud.adrienne@gmail.com">
+								<form method="post" action="mailto:mccloud.adrienne@gmail.com">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -169,7 +169,7 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="mccloud.adrienne@gmail.com">mccloud.adrienne@gmail.com</a>
+										<a href="mailto:mccloud.adrienne@gmail.com">mccloud.adrienne@gmail.com</a>
 									</div>
 								</section>
 								<section>
