email/location changes

--- a/index.html
+++ b/index.html
@@ -182,10 +182,11 @@
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>Nearest the best brewary<br />
-										Open to a city near you<br />
-										United States of America</span>
+										<h3>Interested in:</h3>
+										<span>Full-time/Part-time/Contract/Freelance<br />
+										<h3>Locations:</h3>
+										Washington, DC/ New York, NY, Denver, CO<br />
+										LA County, CA, Philadelphia, PA, </span>
 									</div>
 								</section>
 							</section>
