email/location changes

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 						<div class="inner">
 							<header class="major">
 								<h1>Offical Portfolio of Adrienne M.</h1>
-								<h1>Developer/Writer</h1>
+								<h2>Developer/Writer</h2>
 							</header>
 							<div class="content">
-								<p>Hey there! Thanks for visiting my portfolio.<br/> My name is Adrienne. I'm an Android Developer with a passion for entreprenurship and writing.<br />
+								<p>Hey there! Thanks for visiting my portfolio. My name is Adrienne.<br/> I'm an Android Developer with a passion for entreprenurship and writing.<br />
 								Below are examples of apps that I have created and pieces that I have written.<br/>
 								Below that is a brief bio about myself and how we can connect.<br/>
 								I look forward to connecting. 
