added writing portfolio link

--- a/index.html
+++ b/index.html
@@ -88,16 +88,17 @@
 										<p>Mobile commerce app for purchasing dolls.</p>
 									</header>
 								</article>
-								<!----
+								
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic03.jpg" alt="no image" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link">Writing Portfolio</a></h3>
+										<p>Examples from my writing portfolio</p>
 									</header>
 								</article>
+								<!----
 								<article>
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
