--- a/worldviewinterview.html
+++ b/worldviewinterview.html
@@ -35,7 +35,7 @@
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">Get Started</a></li>
-				
+						</ul>
 					</nav>
 
 				<!-- Main -->
@@ -48,17 +48,18 @@
 										<h1>Worldview Interview</h1>
 									</header>	
                   <p>Interviewed Micheal Learned about the issues facing the LGBT RPCV community and how his group was providing support to members.</p>
-                  <span class="image main"><img src="images/WorldviewSpring2013_DiversityinthePeaceCorps_Q&AwithMichaelLearned_copy.pdf" alt="articleWorldview" /></span>
-               </div>
+                  <span class="image main"><img src="images/WorldviewSpring2013.pdf" alt="articleWorldview" /></span>
+              				 </div>
 							</section>
-					</div>
+								</div>
 
 		<!-- Contact -->
 
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action=“mailto:mccloud.adrienne@gmail.com" enctype=“text/plain”>
+								<form method="post" action="mailto:mccloud.adrienne@gmail.com">
+															      
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
