--- a/africaruralconnectpiece.html
+++ b/africaruralconnectpiece.html
@@ -35,7 +35,7 @@
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">Get Started</a></li>
-				
+						</ul>
 					</nav>
 
 				<!-- Main -->
@@ -48,35 +48,32 @@
 										<h1>Africa Rural Connect</h1>
 									</header>	
                   <p>As the program manager for Africa Rural Connect the online community for rural development I wrote a piece on the winner for Second Chances Idea contest. Africa Rural Connect introduces the Original Runner- up for the Second Chance Ideas Contest</p>
-                  <span class="image main"><img src="images/Africa Rural Connect introduces the Original Runner-up for the Second Chance Ideas Contest _ Africa Rural Connect copy.pdf" alt="articleARC" /></span>
+                  <span class="image main"><img src="images/ARCSecondChances.pdf" alt="articleARC" /></span>
                </div>
 							</section>
 					</div>
 
 		<!-- Contact -->
-
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action=“mailto:mccloud.adrienne@gmail.com" enctype=“text/plain”>
+								<form method="post" action="#">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
 									</div>
-
 									<div class="field half">
-								  	<label for="email">Email</label>
+										<label for="email">Email</label>
 										<input type="text" name="email" id="email" />
 									</div>
 									<div class="field">
-									  <label for="message">Message</label>
+										<label for="message">Message</label>
 										<textarea name="message" id="message" rows="6"></textarea>
 									</div>
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="special" /></li>
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
-
 								</form>
 							</section>
 							<section class="split">
@@ -84,8 +81,7 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="mccloud.adrienne@gmail.com">mccloud.adrienne@gmail.com</a>
-
+										<a href="mailto:mccloud.adrienne@gmail.com">mccloud.adrienne@gmail.com</a>
 									</div>
 								</section>
 								<section>
@@ -98,45 +94,43 @@
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>Nearest the best brewary<br />
-										Open to a city near you<br />
-										United States of America</span>
+										<h3>Interested in:</h3>
+										<span>Full-time/Part-time/Contract/Freelance<br />
+										<h3>Locations:</h3>
+										Washington, DC/ New York, NY, Denver, CO<br />
+										LA County, CA, Philadelphia, PA, </span>
 									</div>
 								</section>
 							</section>
 						</div>
 					</section>
 
-
 				<!-- Footer -->
-
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="https://twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="linkedin.com/in/adrienne-mccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
+
 			</div>
 
-
 		<!-- Scripts -->
-
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-
 			<script src="assets/js/main.js"></script>
 
 	</body>
-
 </html>
