--- a/landing.html
+++ b/landing.html
@@ -73,7 +73,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
+									<a href="africaruralconnectpiece.html" class="image">
 										<img src="images/ARCSecondChances.pdf" alt="ARC piece" data-position="center center" />
 									</a>
 									<div class="content">
@@ -89,8 +89,8 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/WorldviewSpring2013.pdf" alt="world view" data-position="top center" />
+									<a href="worldviewinterview.html" class="image">
+										<img src="images/q&atitle.png" alt="world view" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -106,7 +106,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/patch.com_articles.pdf" alt="Patch piece" data-position="25% 25%" />
+										<img src="images/patchimage.png" alt="Patch piece" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
