--- a/worldviewinterview.html
+++ b/worldviewinterview.html
@@ -48,7 +48,7 @@
 										<h1>Worldview Interview</h1>
 									</header>	
                   <p>Interviewed Micheal Learned about the issues facing the LGBT RPCV community and how his group was providing support to members.</p>
-                  <span class="image main"><img src="images/WorldviewSpring2013.pdf" alt="articleWorldview" /></span>
+                  <span class="image main"><img src="images/WorldviewSpring2013.png" alt="articleWorldview" /></span>
               				 </div>
 							</section>
 								</div>
