--- a/patchpiece.html
+++ b/patchpiece.html
@@ -50,7 +50,7 @@
 										<h1>Patch piece</h1>
 									</header>
 									<p>Article about Prince's George's County historical landmark- Tayman Tobacco Farm.</p>
-									<span class="image main"><img src="images/patch.com_articles.png" alt="patchpiece" /></span>
+									<span class="image main"><img src="images/patch.com_articles.jpg" alt="patchpiece" /></span>
 									
 								</div>
 							</section>
