--- a/landing.html
+++ b/landing.html
@@ -32,7 +32,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
+							<li><a href="landing.html">Writing</a></li>
 						
 						</ul>
 						<ul class="actions vertical">
