--- a/patchpiece.html
+++ b/patchpiece.html
@@ -31,7 +31,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
+							<li><a href="landing.html">Writing</a></li>
 						
 						</ul>
 						<ul class="actions vertical">
@@ -112,6 +112,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+							<!------
 							<ul class="icons">
 								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
@@ -119,6 +120,7 @@
 								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
+------>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
