--- a/africaruralconnectpiece.html
+++ b/africaruralconnectpiece.html
@@ -97,7 +97,7 @@
 										<h3>Interested in:</h3>
 										<span>Full-time/Part-time/Contract/Freelance<br />
 										<h3>Locations:</h3>
-										Washington, DC/ New York, NY, Denver, CO<br />
+										Washington, DC, New York, NY, Denver, CO<br />
 										LA County, CA, Philadelphia, PA, </span>
 									</div>
 								</section>
