changed arc image

--- a/landing.html
+++ b/landing.html
@@ -74,7 +74,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="africaruralconnectpiece.html" class="image">
-										<img src="images/ARCSecondChances.pdf" alt="ARC piece" data-position="center center" />
+										<img src="images/arcscreenshot.png" alt="ARC piece" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
