--- a/momscookbook.html
+++ b/momscookbook.html
@@ -45,11 +45,12 @@
 									<header class="major">
 										<h1>Moms Cookbook</h1>
 									</header> 
-									<span class="image main"><img src="images/todolistapp.jpg" alt="To Do App" height="" width=""/></span>
+									<span class="image main"><img src="images/momscookbook.png" alt="Moms Cookbook image" height="" width=""/></span>
                   							<p>What it does</p>
 									<p>The app allows user to collect recipes into one place. Users are able to enter recipes manually. User can find recipes online and save them.</p>
                   							<p><strong>Technologies</strong></p>
 									<p>SQLite, Retrofit, API</p>
+								
                   							
                							</div>
 							</section>
