--- a/mobilecommerceapp.html
+++ b/mobilecommerceapp.html
@@ -165,7 +165,7 @@
 
 								<li><a href="https://github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 
-								<li><a href="linkedin.com/in/adrienne-mccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="http://linkedin.com/in/adrienne-mccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
 							</ul>
 
