--- a/landing.html
+++ b/landing.html
@@ -97,7 +97,7 @@
 											<header class="major">
 												<h3>Worldview</h3>
 											</header>
-											<p>Interview with Micheal Learned leader of the LGBT group for RPCVs.</p>
+											<p>Interview with Michael Learned leader of the LGBT group for RPCVs.</p>
 											<ul class="actions">
 												<li><a href="worldviewinterview.html" class="button">Learn more</a></li>
 											</ul>
