--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Offical Portfolio of Adrienne M.</h1>
+								<h1>Portfolio of Adrienne M.</h1>
 								<h2>Developer/Writer</h2>
 							</header>
 							<div class="content">
