--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>Politically junkie, reader, traveler and firm believer that knowledge is power. Looking for a developer position in a team where I can continue to learn and grow as a developer. In five years, I want to be a product manager.</p>
+									<p>Politically junkie, reader, traveler and firm believer that knowledge is power. Looking for a position in a team where I can continue to learn and grow as a developer. In five years, I want to be a product manager.</p>
 									
 									
 								</div>
