--- a/pokemonyelp.html
+++ b/pokemonyelp.html
@@ -46,12 +46,12 @@
 										<h1>PokemonYelp App</h1>
 									</header> 
 									<span class="image main"><img src="images/pokemonyelp1.png" alt="Pokemon Yelp app" height="" width=""/></span>
-                  							<p>What it does</p>
+                  							<p>What it does:</p>
 									<p>This was a group project where the goal was to create an app that would allow users to find new business in a fun way.<br>
-                  We decided to build off the recent Pokemon craze and created Pokemon Yelp. Using the Google Play Services leaderboard users are able to compete against friends eachother.<br>
-                  How it works: User visits a business on Pokemon Yelp, once on the detail page the user is able to scan for pokemon. If the user is within a certain range of the business they are able to catch the pokmeon.</p>
+                  We decided to build off the recent Pokemon craze and created Pokemon Yelp. Using the Google Play Services leaderboard, users are able to compete against friends.<br>
+									<p>How it works:</p> User visit a business on Pokemon Yelp, once on the detail page the user is able to scan for pokemon. If the user is within a certain range of the business they are able to catch the pokmeon.</p>
                   							<p><strong>Technologies</strong></p>
-									<p>SQLite, API, Geolocation, Google Games Services</p>
+									<p>Android Studio, Git, SQLite, Rest API, Geolocation, Google Play Games Services</p>
 									<span class="image main"><img src="images/pokemonyelp2.png" alt="Pokemon Yelp app" height="" width=""/></span>
 									
                   							
