--- a/mobilecommerceapp.html
+++ b/mobilecommerceapp.html
@@ -49,7 +49,7 @@
 									<p><strong>What it does</strong></p>
                   							<p>This mobile commerce app allows the user to add items to the shopping cart and a wish list. The user is able to search though the database of items. </p>
 									<p><strong>Technologies</strong></p>
-									<p>SQLite, RecyclerView</p>
+									<p>Android Studio, Git, Picasso, SQLite</p>
 									<p><strong>Future Expansion</strong></p>
                   							<p>Connect to payment services. Item comparison.</p>
                   							
