--- a/momscookbook.html
+++ b/momscookbook.html
@@ -47,9 +47,9 @@
 									</header> 
 									<span class="image main"><img src="images/momscookbook.png" alt="Moms Cookbook image" height="" width=""/></span>
                   							<p>What it does</p>
-									<p>The app allows user to collect recipes into one place. Users are able to enter recipes manually. User can find recipes online and save them.</p>
+									<p>The app allows user to collect recipes into one place. Users are able to enter recipes manually. Users are able to search an API to find recipes. For recipes found using the API, users can view the full recipe in a Web Activity inside the app.</p>
                   							<p><strong>Technologies</strong></p>
-									<p>SQLite, Retrofit, API</p>
+									<p>Android Studio, Git, Picasso, SQLite, Retrofit, Rest API</p>
 								
                   							
                							</div>
