--- a/todoapp.html
+++ b/todoapp.html
@@ -49,7 +49,7 @@
                   							<p>What it does</p>
 									<p>To Do app is a simple way to keep track of things you want to buy. Enter the title of the list on the second screen. On the next screen the user is able to enter the item and any desired description. Once an item has been added to the list, the user is able to review all lists from the main screen.</p>
                   							<p><strong>Technologies</strong></p>
-									<p>Singleton, Material Design, ListView</p>
+									<p>Android Studio, Git, Material Design </p>
                   							
                							</div>
 							</section>
