--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 								<h2>Developer/Writer</h2>
 							</header>
 							<div class="content">
+								<span style="font-family:Arial"
 								<p>Hey there! Thanks for visiting my portfolio. My name is Adrienne.<br/> I'm an Android Developer with a passion for entreprenurship and writing.<br />
 								Below are examples of apps that I have created and pieces that I have written.<br/>
 								Below that is a brief bio about myself and how we can connect.<br/>
@@ -61,6 +62,7 @@
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Checkout my work</a></li>
 								</ul>
+							        </span>	
 							</div>
 						</div>
 					</section>
