--- a/index.html
+++ b/index.html
@@ -49,15 +49,13 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Portfolio of Adrienne M.</h1>
-								<h2>Developer/Writer</h2>
+								<h1>Portfolio for Adrienne M.</h1>
+								<h2>Technical Writer</h2>
 							</header>
 							<div class="content">
 								<span style="font-family:Arial"
-								<p>Hey there! Thanks for visiting my portfolio. My name is Adrienne.<br/> I'm an Android Developer with a passion for entreprenurship and writing.<br />
-								Below are examples of apps that I have created and pieces that I have written.<br/>
-								Below that is a brief bio about myself and how we can connect.<br/>
-								I look forward to connecting. 
+								      <p>Are you looking for someone...</br> - to help you find the RIGHT words?</br> - that can see the bigger picture?</br> - experienced in breaking down complex technical concepts?</br>
+                                                                       - that always makes their deadline?</br> - that enjoys researching and sharing knowledge?</br> - capable of using creating educational presentations and videos?</br>
 								</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Checkout my work</a></li>
@@ -74,6 +72,15 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
+										<img src="images/pic03.jpg" alt="no image" />
+									</span>
+									<header class="major">
+										<h3><a href="landing.html" class="link">Writing Portfolio</a></h3>
+										<p>Examples from my writing portfolio</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
 										<img src="images/todolistapp.jpg" alt="To Do App" height="200px" width="200px" />
 									</span>
 									<header class="major">
@@ -88,16 +95,6 @@
 									<header class="major">
 										<h3><a href="mobilecommerceapp.html" class="link">Mobile Commerce App</a></h3>
 										<p>Mobile commerce app for purchasing dolls.</p>
-									</header>
-								</article>
-								
-								<article>
-									<span class="image">
-										<img src="images/pic03.jpg" alt="no image" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Writing Portfolio</a></h3>
-										<p>Examples from my writing portfolio</p>
 									</header>
 								</article>
 								
@@ -190,8 +187,8 @@
 										<h3>Interested in:</h3>
 										<span>Full-time/Part-time/Contract/Freelance<br />
 										<h3>Locations:</h3>
-										Washington, DC, New York, NY, Denver, CO<br />
-										LA County, CA, Philadelphia, PA, </span>
+										Washington, DC. <br />
+										</span>
 									</div>
 								</section>
 							</section>
