--- a/landing.html
+++ b/landing.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Adrienne's Portfolio:Writing</strong></a>
+						<a href="index.html" class="logo"><strong>Adrienne's Portfolio: Writing</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -52,7 +52,7 @@
 								<h1>Writing Portfolio</h1>
 							</header>
 							<div class="content">
-								<p>Examples from my writing portfolio.</p>
+								<p>Technical and Non-technical</p>
 							</div>
 						</div>
 					</section>
@@ -81,7 +81,7 @@
 											<header class="major">
 												<h3>Africa Rural Connect</h3>
 											</header>
-											<p>Piece on the winner from the Second Chances Contest held by Africa Rural Connect.</p>
+											<p>Winner of Africa Rural Connect's Second Chances Contest.</p>
 											<ul class="actions">
 												<li><a href="africaruralconnectpiece.html" class="button">Learn more</a></li>
 											</ul>
@@ -97,7 +97,7 @@
 											<header class="major">
 												<h3>Worldview</h3>
 											</header>
-											<p>Interview with Michael Learned leader of the LGBT group for RPCVs.</p>
+											<p>Interview with Michael Learned leader of LGBT Returned Peace Corps Volunteer Association.</p>
 											<ul class="actions">
 												<li><a href="worldviewinterview.html" class="button">Learn more</a></li>
 											</ul>
@@ -113,7 +113,7 @@
 											<header class="major">
 												<h3>Patch</h3>
 											</header>
-											<p>Brief piece on the Prince George's County historical landmark.</p>
+											<p>A Prince George's County historical landmark.</p>
 											<ul class="actions">
 												<li><a href="patchpiece.html" class="button">Learn more</a></li>
 											</ul>
@@ -180,10 +180,10 @@
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
 										<h3>Interested in:</h3>
-										<span>Full-time/Part-time/Contract/Freelance<br />
+										<span>Full-time/ Part-time/ Contract/ Freelance<br />
 										<h3>Locations:</h3>
-										Washington, DC, New York, NY, Denver, CO<br />
-										LA County, CA, Philadelphia, PA, </span>
+										Washington, DC
+										</span>
 									</div>
 								</section>
 							</section>
