--- a/landing.html
+++ b/landing.html
@@ -33,7 +33,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">Writing</a></li>
-						
+						        <li><a href="applicationportfolio.html">Applications</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">Get Started</a></li>
