--- a/applicationportfolio.html
+++ b/applicationportfolio.html
@@ -33,7 +33,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">Writing</a></li>
-              <li><a href="applicationportfolio.html">Applications</a></li>
+                                                        <li><a href="applicationportfolio.html">Applications</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">Get Started</a></li>
@@ -72,23 +72,23 @@
 							------>
 						<!-- Two -->
 							<section id="two" class="spotlights">
-								<section>
-									<a href="" class="image">
-										<img src="images/" alt="" data-position="center center" />
+					<!--application1 -->	<section> 
+									<a href="images/pic03.jpg" class="image">
+										<img src="images/todolistapp.jpg" alt="To Do App" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Title</h3>
+												<h3>To Do App</h3>
 											</header>
-											<p>Description.</p>
+											<p>A simple app to store a to do list.</p>
 											<ul class="actions">
-												<li><a href="" class="button">Learn more</a></li>
+												<li><a href="todoapp.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
-								<section>
+			<!--application2 -->			<section>
 									<a href="" class="image">
 										<img src="images/" alt="" data-position="top center" />
 									</a>
@@ -104,7 +104,7 @@
 										</div>
 									</div>
 								</section>
-								<section>
+				<!--application3 -->		<section>
 									<a href="generic.html" class="image">
 										<img src="images/patchimage.png" alt="Patch piece" data-position="25% 25%" />
 									</a>
