--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/todolistapp.jpg" alt="To Do App" height="200px" width="200px" />
+										<img src="images/pic03.jpg" alt="no image" />
 									</span>
 									<header class="major">
-										<h3><a href="todoapp.html" class="link">To Do App</a></h3>
-										<p>A simple app to store a to do list.</p>
+										<h3><a href="applicationportfolio.html" class="link">Application Portfolio</a></h3>
+										<p>Examples from my application portfolio</p>
 									</header>
 								</article>
 								<article>
