--- a/applicationportfolio.html
+++ b/applicationportfolio.html
@@ -52,7 +52,7 @@
 								<h1>Application Portfolio</h1>
 							</header>
 							<div class="content">
-								<p>Native Android applications on Android Studio, SQLite Databases, APIs, Google Leaderboard, XML, Unit/Espresso Testing, and GPS</p>
+								<span style="font-family:Arial"<p>Native Android applications on Android Studio, SQLite Databases, APIs, Google Leaderboard, XML, Unit/Espresso Testing, and GPS</p></span>
 							</div>
 						</div>
 					</section>
@@ -73,7 +73,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 					<!--application1 -->	<section> 
-									<a href="images/pic03.jpg" class="image">
+									<a href="todoapp.html" class="image">
 										<img src="images/todolistapp.jpg" alt="To Do App" data-position="center center" />
 									</a>
 									<div class="content">
@@ -89,53 +89,55 @@
 									</div>
 								</section>
 			<!--application2 -->			<section>
-									<a href="" class="image">
-										<img src="images/" alt="" data-position="top center" />
+									<a href="mobilecommerceapp.html" class="image">
+										<img src="images/mobilecommerceapp.jpg" alt="Mobile Commerce App" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Title</h3>
+												<h3>Mobile Commerce App</h3>
 											</header>
-											<p>description</p>
+											<p>Mobile commerce app for purchasing dolls.</p>
 											<ul class="actions">
-												<li><a href="" class="button">Learn more</a></li>
+												<li><a href="mobilecommerceapp.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 				<!--application3 -->		<section>
-									<a href="generic.html" class="image">
-										<img src="images/patchimage.png" alt="Patch piece" data-position="25% 25%" />
+									<a href="pokemonyelp.html" class="image">
+										<img src="images/pokemonyelp1.png" alt="PokemonYelp App" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Patch</h3>
+												<h3>PokemonYelp App</h3>
 											</header>
-											<p>A Prince George's County historical landmark.</p>
+											<p>What happens when you combine Pokemon and Yelp?</p>
 											<ul class="actions">
-												<li><a href="patchpiece.html" class="button">Learn more</a></li>
+												<li><a href="pokemonyelp.html" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+				<!--application4 -->		<section>
+									<a href="momscookbook.html" class="image">
+										<img src="images/momscookbook.png" alt="Mom's Cookbook App" data-position="25% 25%" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Mom's Cookbook App</h3>
+											</header>
+											<p>What happens when you combine Pokemon and Yelp?</p>
+											<ul class="actions">
+												<li><a href="momscookbook.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
 
-						<!-- Three -->
-						<!------
-							<section id="three">
-								<div class="inner">
-									<header class="major">
-										<h2>Massa libero</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
-							</section>
-							------>
 					</div>
 
 				
@@ -143,15 +145,6 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-								<!-----
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
------->
-							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
