--- a/mobilecommerceapp.html
+++ b/mobilecommerceapp.html
@@ -58,7 +58,7 @@
 
 					</div>
 
-<!-- Contact -->
+<!-- Contact
 
 					<section id="contact">
 
@@ -151,11 +151,11 @@
 						</div>
 
 					</section>
+        -->
 
 
 
-
-				<!-- Footer -->
+				<!-- Footer 
 
 					<footer id="footer">
 						<div class="inner">
@@ -170,6 +170,7 @@
 							</ul>
 
 							<ul class="copyright">
+				-->
 
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
