--- a/momscookbook.html
+++ b/momscookbook.html
@@ -57,7 +57,7 @@
 
 					</div>
 
-<!-- Contact -->
+<!-- Contact 
 
 					<section id="contact">
 
@@ -151,10 +151,10 @@
 
 					</section>
 
+   -->
 
 
-
-				<!-- Footer -->
+				<!-- Footer 
 
 					<footer id="footer">
 						<div class="inner">
@@ -177,7 +177,7 @@
 
 
 			</div>
-
+      -->
 
 
 
