--- a/patchpiece.html
+++ b/patchpiece.html
@@ -57,7 +57,7 @@
 
 					</div>
 
-				<!-- Contact -->
+				<!-- Contact
 					<section id="contact">
 						<div class="inner">
 							<section>
@@ -108,11 +108,11 @@
 							</section>
 						</div>
 					</section>
-
-				<!-- Footer -->
+    -->
+				<!-- Footer 
 					<footer id="footer">
 						<div class="inner">
-							<!------
+							
 							<ul class="icons">
 								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
@@ -120,13 +120,13 @@
 								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
------->
+
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
-
+      ------>
 			</div>
 
 		<!-- Scripts -->
