--- a/patchpiece.html
+++ b/patchpiece.html
@@ -109,7 +109,7 @@
 						</div>
 					</section>
     -->
-				<!-- Footer 
+				<!-- Footer ------>
 					<footer id="footer">
 						<div class="inner">
 							
@@ -126,7 +126,7 @@
 							</ul>
 						</div>
 					</footer>
-      ------>
+      
 			</div>
 
 		<!-- Scripts -->
