--- a/momscookbook.html
+++ b/momscookbook.html
@@ -154,17 +154,17 @@
    -->
 
 
-				<!-- Footer 
+				<!-- Footer  -->
 
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
 
-								<li><a href="https://twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 
-								<li><a href="https://github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 
-								<li><a href="http://linkedin.com/in/adrienne-mccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://linkedin.com" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
 							</ul>
 
@@ -177,7 +177,7 @@
 
 
 			</div>
-      -->
+     
 
 
 
