--- a/todoapp.html
+++ b/todoapp.html
@@ -56,7 +56,7 @@
 
 					</div>
 
-<!-- Contact -->
+			<!-- Contact 
 
 					<section id="contact">
 
@@ -149,8 +149,8 @@
 						</div>
 
 					</section>
-
-
+             -->
+         
 
 
 				<!-- Footer -->
@@ -159,11 +159,11 @@
 						<div class="inner">
 							<ul class="icons">
 
-								<li><a href="https://twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 
-								<li><a href="https://github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 
-								<li><a href="linkedin.com/in/adrienne-mccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://linkedin.com/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
 							</ul>
 
