--- a/pokemonyelp.html
+++ b/pokemonyelp.html
@@ -60,7 +60,7 @@
 
 					</div>
 
-<!-- Contact -->
+<!-- Contact
 
 					<section id="contact">
 
@@ -153,7 +153,7 @@
 						</div>
 
 					</section>
-
+         -->
 
 
 
@@ -163,11 +163,11 @@
 						<div class="inner">
 							<ul class="icons">
 
-								<li><a href="https://twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 
-								<li><a href="https://github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 
-								<li><a href="https://linkedin.com/in/adrienne-mccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://linkedin.com/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
 							</ul>
 
