--- a/worldviewinterview.html
+++ b/worldviewinterview.html
@@ -53,7 +53,7 @@
 							</section>
 								</div>
 
-		<!-- Contact -->
+		<!-- Contact 
 
 					<section id="contact">
 						<div class="inner">
@@ -109,16 +109,16 @@
 							</section>
 						</div>
 					</section>
-
+       -->
 
 				<!-- Footer -->
 
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="https://twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="linkedin.com/in/adrienne-mccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://github.com/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://linkedin.com/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
